bk_ida/gobmkida/g0/location_to_string
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/location_to_string/src/engine/printutils.c:740:7: error: use of undeclared identifier 'init_1'
if ( !init_1 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/location_to_string/src/engine/printutils.c:743:29: error: use of undeclared identifier 'buf_0'
location_to_buffer( pos_0, &buf_0[5 * pos_0]); 
                            ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/location_to_string/src/engine/printutils.c:744:1: error: use of undeclared identifier 'init_1'
init_1 = 1; 
^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/location_to_string/src/obj/1/printutils.o] Error 1
